# firm-names-with-typo-clustering

./: .gitignore  README.md  pyproject.toml
configs/: demo.yaml
docs/: demo_validation.md  fine_tuning_workflow.md  original_code_mapping.md  workflow_report.md
examples/: fake_full_sample.csv  fake_pending.csv  fake_training.csv
src/name_clustering/: __init__.py  cli.py  io.py  model.py  normalization.py  workflows.py
